objects/DMAPP__DM_Segmentation_Question_Option__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Question__c</fullName>
        <label>Segmentation Question</label>
        <referenceTo>DMAPP__DM_Segmentation_Question__c</referenceTo>
        <relationshipLabel>Segmentation Question Options</relationshipLabel>
        <relationshipName>Segmentation_Question_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Segmentation Question Option</label>
    <nameField>
        <label>Question Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Question Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Must_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Score__c &lt; 0</errorConditionFormula>
        <errorMessage>Must be positive</errorMessage>
    </validationRules>
</CustomObject>